--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,30 @@
 spring:
+  application:
+    name: messaging-app
   security:
     oauth2:
       client:
         registration:
           github:
-            client-id: <clientID>
-            client-secret: <clientSecret>
+            client-id: 
+            client-secret: 
+  data:
+    cassandra:
+      keyspace-name: main
+      username: 
+      password: 
+      schema-action: recreate-drop-unused
+      request:
+        timeout: 10s
+      connection: 
+        connect-timeout: 10s
+        init-query-timeout: 10s
+
+astra.db:
+  id: 
+  region: asia-south1
+  keyspace: main
+  application.token: <token> 
+
+datastax.astra:
+  secure-connect-bundle: secure-connect.zip
