--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ astra.db:
   id: 
   region: asia-south1
   keyspace: main
-  application.token: 
+  application.token: demo
 
 datastax.astra:
   secure-connect-bundle: secure-connect.zip
